Apparently List.of().indexOf(null) throws. java is a riot sometimes